<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp"
    tools:context=".ui.scheduleAppointment.searcher.SearcherActivity">

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/llConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:text="@string/tv_confirmation"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_appointment"
            android:gravity="center_horizontal"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/titleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_complete_name"/>

            <TextView
                android:id="@+id/tvName"
                style="@style/dateStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/titleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/tv_speciality"/>

            <TextView
                android:id="@+id/tvSpeciality"
                style="@style/dateStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/titleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/tv_doctor"/>

            <TextView
                android:id="@+id/tvDoctor"
                style="@style/dateStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_calender"
                    android:contentDescription="@string/ic_description_calender"
                    app:tint="@color/blue" />

                <TextView
                    android:id="@+id/tvDay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="17sp"
                    android:layout_marginHorizontal="8dp"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_clock"
                    android:contentDescription="@string/ic_description_clock"
                    app:tint="@color/blue"/>

                <TextView
                    android:id="@+id/tvHour"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="17sp"
                    android:layout_marginStart="8dp"/>

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirmAppointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_global"
            android:text="@string/btn_confirm"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPrevious"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_btn_appointments"
            android:text="@string/btn_previous"
            android:textColor="@color/primary"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/navSearcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoToScheduleAppointment"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_btn_schedule_appointment_white"
            android:textColor="@color/primary"
            android:text="@string/btn_one"
            android:textSize="17sp"
            android:layout_marginEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_btn_schedule_appointment_white"
            android:textColor="@color/primary"
            android:text="@string/btn_two"
            android:textSize="17sp"
            android:layout_marginEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_btn_schedule_appointment_white"
            android:textColor="@color/primary"
            android:text="@string/btn_three"
            android:textSize="17sp"
            android:layout_marginEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_btn_schedule_appointment"
            android:textColor="@color/white"
            android:text="@string/btn_four"
            android:textSize="17sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>